# gofi

./: .gitignore  Cargo.toml  Makefile
ethereum/: .gitignore  Makefile  deploy.sh  deploy_swab.sh  deploy_uniswap.sh  do_swab.sh  output_compares  swab.sh
ethereum/contracts/: UniSwab.sol  UsDonA.sol  UsDonC.sol  UsdCoin.sol
ethereum/sepolia/: .gitignore  deploy  deploy.py  pyproject.toml
sol-abi/: UniswapV2Pair.json  uniswap-v2-ab-url  uniswap-v2-deployments
src/: cli.rs  config.rs  decimal.rs  main.rs  unipool.rs
