[package]
name = "gofi"
version = "0.1.0"
edition = "2024"
default-run = "gofi"

[[bin]]
name = "gofi"
path = "src/main.rs"

[[bin]]
name = "u2arb"
path = "src/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
alloy="*"
hex="*"
sha3="*"
redis="0.32"
postgres="*"
once_cell="*"
serde={version="*", features = ["derive"]}
serde_json="*"
serde_yaml="*"
secp256k1="*"
chrono="*"
tracing-subscriber = "0.3.19"
rust_decimal = {version = "*", features = ["maths"]}
num-traits = "0.2.19"
